# riskml-capstone

./: .gitignore  README.md  folder_structure.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: data_dictionary.md  project_charter.md
reports/: MScFE_692_Capstone_Report_Archuleta_v1.docx  MScFE_692_Capstone_Slides_Archuleta_v1.pptx
tests/: test_smoke.py
