[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskml"
version = "0.1.0"
description = "Causal-Aware ML Risk Forecasting — MScFE 692 Capstone"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Steve Archuleta"}]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pyarrow>=14.0",
  "yfinance>=0.2",
  "pandas-datareader>=0.10",
  "fredapi>=0.5",
  "feedparser>=6.0",
  "arch>=6.0",
  "statsmodels>=0.14",
  "scipy>=1.11",
  "cvxpy>=1.4",
  "streamlit>=1.28",
  "python-dotenv>=1.0",
  "python-docx>=1.0",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "ruff>=0.1",
  "jupyter>=1.0",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["riskml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
